# tests-centrum_rowerowe

./: .gitignore  README.md  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
pages/: cart.py  home.py  pdp.py  result.py
settings/: fixtures.py  params.py
tests/: conftest.py  test_add_to_cart.py  test_main_menu_bar.py  test_plp_filters.py  test_search.py
