[tool.poetry]
name = "project-centrum-rowerowe"
version = "0.1.0"
description = ""
authors = ["Jakub <gieratrdm@gmail.com>"]
readme = "README.md"
packages = [{include = "project_centrum_rowerowe"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.3.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"